--- a/books/.project
+++ b/books/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>books</name>
+	<name>usedBooks</name>
 	<comment></comment>
 	<projects>
 	</projects>
